--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-sidebar": "^3.0.2",
     "react-text-mask": "^5.4.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
