--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-collapsible": "^2.2.0",
     "react-dom": "^16.4.0",
     "react-localization": "^1.0.10",
+    "react-radio-group": "^3.0.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
