--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-localization": "^1.0.10",
     "react-radio-group": "^3.0.3",
     "react-redux": "^5.0.6",
+    "react-responsive-carousel": "^3.1.42",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
