--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-table": "^4.3.1",
     "react-collapsible": "^2.2.0",
     "react-dom": "^16.4.0",
+    "react-ga": "^2.5.3",
     "react-localization": "^1.0.10",
     "react-radio-group": "^3.0.3",
     "react-redux": "^5.0.6",
