--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
+    "draft-js": "^0.10.5",
     "formik": "^0.11.11",
     "google-map-react": "^1.0.3",
     "moment": "^2.22.1",
@@ -22,6 +23,7 @@
     "react-bootstrap-table2-paginator": "^1.0.3",
     "react-collapsible": "^2.2.0",
     "react-dom": "^16.4.0",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-ga": "^2.5.3",
     "react-localization": "^1.0.10",
     "react-radio-group": "^3.0.3",
