add logout routes

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 PORT=8080
 #REACT_APP_API_BASEURL=https://www.picstagraph.com/api/
 REACT_APP_API_BASEURL=https://www.picstagraph.com/api/
-REACT_APP_AUTH_BASEURL=http://localhost:8080/
+REACT_APP_AUTH_BASEURL=https://www.picstagraph.com
 REACT_APP_API_TIMEOUT=60000
 REACT_APP_CDN_URL=/global/picstagraph-web
 REACT_APP_IMAGES_CDN_URL=http://localhost:8080/
