--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "draft-js": "^0.10.5",
     "formik": "^0.11.11",
     "google-map-react": "^1.0.3",
-    "moment": "^2.22.1",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.4",
@@ -21,6 +21,7 @@
     "react-bootstrap-table-next": "^1.3.0",
     "react-bootstrap-table2-paginator": "^1.0.3",
     "react-collapsible": "^2.2.0",
+    "react-datepicker": "^1.7.0",
     "react-dom": "^16.4.0",
     "react-draft-wysiwyg": "^1.12.13",
     "react-ga": "^2.5.3",
