--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
+    "react-avatar-editor": "^11.0.4",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-next": "^1.3.0",
@@ -24,6 +25,7 @@
     "react-datepicker": "^1.7.0",
     "react-dom": "^16.4.0",
     "react-draft-wysiwyg": "^1.12.13",
+    "react-dropzone": "^7.0.0",
     "react-ga": "^2.5.3",
     "react-localization": "^1.0.10",
     "react-radio-group": "^3.0.3",
