--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "1.1.4",
     "react-sidebar": "^3.0.2",
     "react-text-mask": "^5.4.1",
+    "react-tooltip": "^3.9.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.3.0",
