--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 PORT=8080
-#REACT_APP_API_BASEURL= https://www.picstagraph.com/api/
-REACT_APP_API_BASEURL= https://www.picstagraph.com/api/
+#REACT_APP_API_BASEURL= http://www.picstagraph.com/api/
+REACT_APP_API_BASEURL= http://www.picstagraph.com/api/
 REACT_APP_AUTH_BASEURL= https://www.picstagraph.com
 REACT_APP_API_TIMEOUT=60000
 REACT_APP_CDN_URL=/global/picstagraph-web
