--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "draft-js": "^0.10.5",
     "formik": "^0.11.11",
     "google-map-react": "^1.0.3",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
@@ -38,6 +39,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-sidebar": "^3.0.2",
+    "react-tagsinput": "^3.19.0",
     "react-text-mask": "^5.4.1",
     "react-tooltip": "^3.9.0",
     "redux": "^4.0.0",
