--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-tagsinput": "^3.19.0",
     "react-text-mask": "^5.4.1",
     "react-tooltip": "^3.9.0",
+    "read-more-react": "^1.0.6",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.3.0",
