--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "watch-css": "npm run build-css && node-sass-chokidar --watch --include-path src src/styles/global/index.scss public/global/picstagraph-web/css/index.css",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
+    "mock": "NODE_ENV=mock npm-run-all -p watch-css start-js",
+    "api": "NODE_ENV=api npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "clean": "rimraf {bin,build}",
     "clean-cdn": "rimraf build/global",
