--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "read-more-react": "^1.0.6",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "string-format": "^2.0.0",
     "yarn": "^1.7.0"
