--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "redux-observable": "^1.0.0",
     "redux-thunk": "^2.3.0",
     "rxjs": "^6.3.3",
+    "socket.io-client": "^2.2.0",
     "string-format": "^2.0.0",
     "yarn": "^1.7.0"
   },
