--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ REACT_APP_PUBLICSITE_BASEURL=http://picstagraph-backend-dev2.us-east-1.elasticbe
 REACT_APP_GA_TRACKING_ID=UA-127149192-1
 REACT_APP_GA_DEBUG=true
 REACT_APP_GA_DIAGNOSTICS=true
+SKIP_PREFLIGHT_CHECK=true
