--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "socket.io-client": "^2.2.0",
     "string-format": "^2.0.0",
     "video.js": "^7.3.0",
+    "vissense": "^0.10.0",
     "yarn": "^1.7.0"
   },
   "scripts": {
