--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.5",
     "draft-convert": "^2.1.4",
     "draft-js": "^0.10.5",
+    "emoji-mart": "^2.9.2",
     "formik": "^0.11.11",
     "google-map-react": "^1.0.3",
     "husky": "^1.2.0",
