--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-responsive-carousel": "^3.1.42",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "^2.1.3",
+    "react-share": "^2.4.0",
     "react-sidebar": "^3.0.2",
     "react-switch": "^3.0.4",
     "react-tag-input": "^6.1.0",
