--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dropzone": "^7.0.0",
     "react-ga": "^2.5.3",
     "react-images": "^0.5.19",
+    "react-json-tree": "^0.11.2",
     "react-lazyload": "^2.3.0",
     "react-localization": "^1.0.10",
     "react-places-autocomplete": "^7.2.0",
