--- a/log-dashboard/package.json
+++ b/log-dashboard/package.json
@@ -10,6 +10,7 @@
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
+    "react-json-tree": "^0.11.2",
     "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
