--- a/.env.local
+++ b/.env.local
@@ -1,12 +1,12 @@
 PORT=8080
-#REACT_APP_API_BASEURL=http://localhost:3146/api/
-REACT_APP_API_BASEURL=http://localhost:3146/api/
-#REACT_APP_API_BASEURL=http://localhost:3146/api/
-REACT_APP_AUTH_BASEURL=http://localhost:3146
+#REACT_APP_API_BASEURL=http://picstagraph-backend-dev.us-east-1.elasticbeanstalk.com/api/
+REACT_APP_API_BASEURL=http://picstagraph-backend-dev.us-east-1.elasticbeanstalk.com/api/
+#REACT_APP_API_BASEURL=http://picstagraph-backend-dev.us-east-1.elasticbeanstalk.com/api/
+REACT_APP_AUTH_BASEURL=http://picstagraph-backend-dev.us-east-1.elasticbeanstalk.com
 REACT_APP_API_TIMEOUT=60000
 REACT_APP_CDN_URL=/global/picstagraph-web
 REACT_APP_IMAGES_CDN_URL=http://localhost:8080/
-REACT_APP_PUBLICSITE_BASEURL=http://localhost:3146
+REACT_APP_PUBLICSITE_BASEURL=http://picstagraph-backend-dev.us-east-1.elasticbeanstalk.com
 
 REACT_APP_GA_TRACKING_ID=UA-127149192-1
 REACT_APP_GA_DEBUG=true
