--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
-    "draft-convert": "^2.1.4",
-    "draft-js": "^0.10.5",
     "emoji-mart": "^2.9.2",
     "formik": "^0.11.11",
     "google-map-react": "^1.0.3",
@@ -31,7 +29,6 @@
     "react-cookie-consent": "^2.0.1",
     "react-datepicker": "^1.7.0",
     "react-dom": "^16.4.0",
-    "react-draft-wysiwyg": "^1.12.13",
     "react-dropzone": "^7.0.0",
     "react-ga": "^2.5.3",
     "react-images": "^0.5.19",
@@ -40,6 +37,7 @@
     "react-localization": "^1.0.10",
     "react-places-autocomplete": "^7.2.0",
     "react-player": "^1.6.6",
+    "react-quill": "^1.3.3",
     "react-radio-group": "^3.0.3",
     "react-redux": "^5.0.6",
     "react-responsive-carousel": "^3.1.46",
