--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-collapsible": "^2.2.0",
     "react-confirm-alert": "^2.0.6",
     "react-cookie-consent": "^2.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^1.7.0",
     "react-dom": "^16.4.0",
     "react-dropzone": "^7.0.0",
