--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ typings/
 
 package-lock.json
 storybook-static/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
