--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,7 @@ services:
     command: 'npm run start'
     ports:
       - "8080:8080"
+    environment:
+      env_file: .env
+      NODE_ENV: development
     
