--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 PORT=8080
-#REACT_APP_API_BASEURL=http://10.0.29.83:3000/api/
-REACT_APP_API_BASEURL=http://10.0.29.83:3000/api/
-#REACT_APP_API_BASEURL=http://10.0.29.83:3000/api/
+#REACT_APP_API_BASEURL=http://picstagraph-backend-dev.us-east-1.elasticbeanstalk.com/api/
+REACT_APP_API_BASEURL=http://picstagraph-backend-dev.us-east-1.elasticbeanstalk.com/api/
+#REACT_APP_API_BASEURL=http://picstagraph-backend-dev.us-east-1.elasticbeanstalk.com/api/
 REACT_APP_AUTH_BASEURL=http://10.0.29.83:3000
 REACT_APP_API_TIMEOUT=60000
 REACT_APP_CDN_URL=/global/picstagraph-web
